--- a/pi/test/parser.vcxproj
+++ b/pi/test/parser.vcxproj
@@ -23,7 +23,6 @@
     <ClInclude Include="..\..\common\trival.h" />
     <ClInclude Include="..\..\common\util.h" />
     <ClInclude Include="..\..\common\Wrapper.h" />
-    <ClInclude Include="..\..\Parser.h" />
     <ClInclude Include="..\Backref.h" />
     <ClInclude Include="..\base\Attribute.h" />
     <ClInclude Include="..\base\FunctorParser.h" />
@@ -33,8 +32,9 @@
     <ClInclude Include="..\base\RefParser.h" />
     <ClInclude Include="..\expression\Backref.h" />
     <ClInclude Include="..\expression\Builder.h" />
+    <ClInclude Include="..\expression\ClassParser.h" />
     <ClInclude Include="..\expression\Function.h" />
-    <ClInclude Include="..\expression\Grammer.h" />
+    <ClInclude Include="..\expression\Grammar.h" />
     <ClInclude Include="..\expression\Idle.h" />
     <ClInclude Include="..\expression\Map.h" />
     <ClInclude Include="..\expression\NoSkip.h" />
@@ -51,6 +51,7 @@
     <ClInclude Include="..\operator\Option.h" />
     <ClInclude Include="..\operator\Repeat.h" />
     <ClInclude Include="..\operator\Sequence.h" />
+    <ClInclude Include="..\Parser.h" />
     <ClInclude Include="..\primitive\Bool.h" />
     <ClInclude Include="..\primitive\Char.h" />
     <ClInclude Include="..\primitive\Charclass.h" />
@@ -64,10 +65,14 @@
     <ClInclude Include="..\scanner\Scanner.h" />
     <ClInclude Include="..\scanner\BaseScanner.h" />
     <ClInclude Include="..\scanner\SkipScanner.h" />
+    <ClInclude Include="BasicsTest.h" />
     <ClInclude Include="calculator.h" />
+    <ClInclude Include="ClassParserTest.h" />
+    <ClInclude Include="GrammarTest.h" />
     <ClInclude Include="JsonItem.h" />
     <ClInclude Include="JsonParser.h" />
     <ClInclude Include="JsonWriter.h" />
+    <ClInclude Include="RuleTest.h" />
     <ClInclude Include="test_backref.h" />
     <ClInclude Include="test_base.h" />
     <ClInclude Include="test_charclass.h" />
@@ -81,12 +86,13 @@
     <Text Include="..\todo.txt" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="parser_test.cpp" />
+    <ClCompile Include="ParserTestSuite.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{5DE310CC-1FA0-485C-ABC2-C636F800E2B8}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
     <RootNamespace>parser</RootNamespace>
+    <ProjectName>Parser-TestSuite</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -139,6 +145,8 @@
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <Profile>true</Profile>
+      <AdditionalLibraryDirectories>c:\libs</AdditionalLibraryDirectories>
+      <AdditionalDependencies>gtest_dbg.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <Bscmake>
       <PreserveSbr>true</PreserveSbr>
